# mini-nlp-framework

./: .gitignore  README.md  setup.cfg
mini_nlp_framework/: data.py  layers.py  losses.py  metrics.py  models.py  predict.py  torch_utils.py  train.py  validate.py
mininlp/: data.py  layers.py  losses.py  metrics.py  misc.py  mlops.py  models.py  predict.py  train.py  validate.py
tests/: data_test.py  metrics_test.py  mlops_test.py  models_test.py  testing_utils.py  train_test.py  validate_test.py
