[metadata]
name = mini-nlp-framework
author = David Leon Fernandez
version = 1.0
description = Mini NLP Framework
long_description = Simple NLP framework for creating classification and language modeling baselines
keywords = nlp, baseline
license = MIT
url = 'https://github.com/davidleonfdez/mini-nlp-framework'
[options]
install_requires =
    numpy
    sklearn
    spacy
    transformers
    torch>=1.9
    tqdm
packages = find:
[options.extras_require]
test = 
    pytest
    coverage
ops =
    mlflow
# TODO: mlflow[pytorch] maybe needed if we add MLFlow models features
